# algo_main

./: .env.example  .gitignore  ALGO_TECHNICAL_SPEC.md  CONTRIBUTING.md  LICENSE  PROJECT_OVERVIEW.md  README.md  ROOTSSECURE_CLOUD_CONTRACT.md  SECURITY.md  TRAINING_PLAN_JCB_PPE.md  alembic.ini  manage.py  pytest.ini  requirements.txt  web_dev_prompt.md
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_device_gateway_columns.py
app/: __init__.py  main.py
app/core/: config.py  database.py  dependencies.py  enums.py  security.py
app/docs/: __init__.py  catalog.py
app/models/: __init__.py  base.py  entities.py
app/repos/: base.py  incident_repo.py  property_repo.py  user_repo.py
app/schemas/: alert.py  auth.py  common.py  device.py  gateway.py  health.py  incident.py  property.py
app/services/: __init__.py  alert_service.py  audit_service.py  auth_service.py  bootstrap_service.py  device_service.py  gateway_service.py  health_service.py  incident_service.py  notification_service.py  partner_service.py  property_service.py
docs/: README.md  getting-started.md
docs/product/: prd.md  (+6 more)
mobile_app/: alert_handler.py  buildozer.spec  communication_manager.py  db_manager.py  main.kv  service.py
models/: best.pt
sentinel_edge/: README.md  __init__.py  requirements.txt
sentinel_edge/vision_cpp/: CMakeLists.txt  vision_bindings.cpp
templates/: project_docs.html
tests/: conftest.py
training/: RUN_COMMANDS_NO_TRAIN.md  merge_all5_datasets.py  prepare_jcb_ppe_dataset.py  run_all5_two_phase.py  run_ultra_train.py
(+67 files in other folders)
